--- a/angular-frontend/src/app/components/welcome/welcome.component.html
+++ b/angular-frontend/src/app/components/welcome/welcome.component.html
@@ -3,8 +3,10 @@
   <div class="col-md-8 text-center pr-md-5">
     <h1 class="mb-3">Добро пожаловать в АИС "Справочник предприятий"</h1>
     <p class="lead mb-4">
-      АИС предназначена для учёта предприятий, контактный данных, адресов, организационно правовых норм, а также для их классификации
+      АИС предназначена для учёта предприятий, контактный данных, адресов, организационно правовых норм, а также для их
+      классификации
       по экономическим видам деятельности.
     </p>
   </div>
+
 </div>
