--- a/angular-frontend/src/app/components/address/address.component.html
+++ b/angular-frontend/src/app/components/address/address.component.html
@@ -1,1 +1,140 @@
-<p>address works!</p>
+<div align="right" id="btnAddNew">
+  <button type="button"
+          (click)="openAddModal()"
+          class="btn btn-primary"
+          data-toggle="modal"
+          data-target="#addAdrModal">Добавить новый адрес в справочник
+  </button>
+</div>
+
+<div align="center">
+  <table class="table table-bordered">
+    <caption>List of addresses</caption>
+
+    <thead>
+    <tr>
+      <th scope="col">Город</th>
+      <th scope="col">Улица</th>
+      <th scope="col">Дом</th>
+      <th scope="col">Офис</th>
+      <th scope="col">Действия</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr *ngFor="let address of addresses ">
+      <td>{{address.addressJsonb.cityName}}</td>
+      <td>{{address.addressJsonb.streetName}}</td>
+      <td>{{address.addressJsonb.houseNumber}}</td>
+      <td>{{address.addressJsonb.officeNumber}}</td>
+      <td>
+        <button type="button"
+                (click)="openEditModal(address.id)"
+                class="btn btn-primary btn-sm btn-block"
+                data-toggle="modal"
+                data-target="#editAdrModal">Редактировать
+        </button>
+        <button type="button" (click)="deleteAddress(address.id)"
+                class="btn btn-danger btn-sm btn-block">Удалить
+        </button>
+      </td>
+    </tr>
+    </tbody>
+
+  </table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="editAdrModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Редактировать запись</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" ng-controller="editController">
+
+        <form name="editForm">
+
+          <div class="form-group">
+            <label for="address-city" class="col-form-label">Город:</label>
+            <input [(ngModel)]="city" name="address-city" type="text" class="form-control" id="address-city">
+          </div>
+
+          <div class="form-group">
+            <label for="address-street" class="col-form-label">Улица:</label>
+            <input [(ngModel)]="street" name="address-street" type="text" class="form-control" id="address-street">
+          </div>
+
+          <div class="form-group">
+            <label for="address-house" class="col-form-label">№ дома:</label>
+            <input [(ngModel)]="house" name="address-house" type="text" class="form-control" id="address-house">
+          </div>
+
+          <div class="form-group">
+            <label for="address-office" class="col-form-label">№ офиса:</label>
+            <input [(ngModel)]="office" name="address-office" type="text" class="form-control" id="address-office">
+          </div>
+
+        </form>
+
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="saveChanges()" data-dismiss="modal">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="addAdrModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Добавить запись</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" ng-controller="addController">
+
+        <form name="addForm">
+
+          <div class="form-group">
+            <label for="add-address-city" class="col-form-label">Город:</label>
+            <input [(ngModel)]="city" name="address-city" type="text" class="form-control" id="add-address-city">
+          </div>
+
+          <div class="form-group">
+            <label for="add-address-street" class="col-form-label">Улица:</label>
+            <input [(ngModel)]="street" name="address-street" type="text" class="form-control" id="add-address-street">
+          </div>
+
+          <div class="form-group">
+            <label for="add-address-house" class="col-form-label">№ дома:</label>
+            <input [(ngModel)]="house" name="address-house" type="text" class="form-control" id="add-address-house">
+          </div>
+
+          <div class="form-group">
+            <label for="add-address-office" class="col-form-label">№ офиса:</label>
+            <input [(ngModel)]="office" name="address-office" type="text" class="form-control" id="add-address-office">
+          </div>
+
+        </form>
+
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="saveChanges()" data-dismiss="modal">Save changes</button>
+      </div>
+
+    </div>
+  </div>
+</div>
